--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,15 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_pro: ^1.0.0
+  cloud_firestore: ^3.1.17
   cupertino_icons: ^1.0.2
+  firebase_analytics: ^9.1.9
+  firebase_auth: ^3.3.19
+  firebase_core: ^1.17.1
   flutter:
     sdk: flutter
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
