--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   firebase_core: ^1.17.1
   flutter:
     sdk: flutter
+  fluttertoast: ^8.0.9
+  google_sign_in: ^5.3.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_lints: ^2.0.0
