--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.9
+  font_awesome_flutter: ^10.1.0
   google_sign_in: ^5.3.2
+  provider: ^6.0.3
   shared_preferences: ^2.0.15
 
 dev_dependencies:
