--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_analytics: ^9.1.9
   firebase_auth: ^3.3.19
   firebase_core: ^1.17.1
+  firebase_database: ^9.0.15
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.9
